@@ -32,16 +32,16 @@
   b4c60a4702749a0369b5059e7c1f50ce567e2c95 2012073100 mingw32-bzip2.xml
   c2fa4fe580615c774f72216fb06e35a909a08ba6 2012040200 mingw32-cygutils.xml
   c320ae7f1db93419e4a9b9ad098f69bb6655af08 2013012700 mingw32-dos2unix.xml
-  ab236eeed9aa409089e6495c172c4f994b3272bf 2013090200 mingw32-expat.xml
+  a14614e416d2a0aa7d4d0bbc1b30ab85e73d704b 2013090300 mingw32-expat.xml
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
-  79f41e5679830880140aa807be23d09b782a6c79 2013090100 mingw32-gcc4.xml
+  b60bbd190c002f707d23ead185b38ba413784bd2 2013090300 mingw32-gcc4.xml
   2aec3c75d5ccba91607e343bcc304f3baf24ae56 2012082702 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
-  c9bf42cfba4c77099c13aed0ce8c42630663f841 2013090201 mingw32-gettext.xml
+  e96f16b3e2b203b30e719f840acb0bed5a44226a 2013090300 mingw32-gettext.xml
   b17b34405de37f8ee13721fd08da82ca63c3491f 2013082300 mingw32-gmp.xml
   99e3ac0d2c743b0d927a4d89a3153a975d2bdf87 2012073100 mingw32-libarchive.xml
-  5377727bdca96194b08ea80b9f3db3b3b96e71a0 2013090100 mingw32-libiconv.xml
+  e82d6fd4d137c61c2e30da0e6208f75ae6c15c96 2013090300 mingw32-libiconv.xml
   ccc15973cdc9ff14c12e4385c3e692af1c18b29d 2012073100 mingw32-libtool.xml
   abf16c6e3575585f92c4a88b7be2c1bf6f7e5f26 2012021600 mingw32-lua.xml
   ad4dbe74ea803c6e1e60aae92768cf62655fb77d 2012090201 mingw32-make.xml
@@ -50,13 +50,13 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   d0657d9bc4fd5fa5bae78d80f003485cfde305c3 2013082300 mingw32-mpc.xml
   9c47305797d932da02275a6894b30492440af00e 2013082300 mingw32-mpfr.xml
-  983af8ad24a6f97da867784dfeeecc6661d54d88 2013090202 mingw32-package-list.xml
+  983af8ad24a6f97da867784dfeeecc6661d54d88 2013090300 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   7e22a7d22719059c28dcb37b7a48806070964b09 2013082800 mingw32-pthreads-w32.xml
   c5e5acd7ddfbb8b412ba1ade45088d7a22433228 2013082303 mingw32-runtime.xml
   12acb32f80e49c893167cfae82e448dd766d49bb 2013070100 mingw32-wsl-candidate.xml
   247a02890f109a5fe4996fde4af9d576dca3cd1e 2012073100 mingw32-xz.xml
-  a8ccf345561b36b3fb00e2e5767206bd65419fde 2013082600 mingw32-zlib.xml
+  9e86522ad30e1446fd3d78bb0309121674a159b6 2013090300 mingw32-zlib.xml
 #
 # $RCSfile$: end of file
