@@ -111,6 +111,10 @@
         <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
         <release tarname="libcharset-1.13.1-1-mingw32-dll-1.tar.lzma" />
         <release tarname="libcharset-1.14-2-mingw32-dll-1.tar.lzma" />
+	<release tarname="libcharset-1.14-3-mingw32-dll-0.tar" >
+	  <download tarname="none"/>
+	  <requires eq="libiconv-1.14-3-mingw32-dll.tar.lzma" />
+	</release>
       </component>
     </package>
 
