@@ -29,7 +29,9 @@
       </component>
 
       <component class="dev">
-        <release tarname="zlib-1.2.8-1-mingw32-dev.tar.lzma" />
+        <release tarname="zlib-1.2.8-1-mingw32-dev.tar.lzma" >
+	  <requires tarname="zlib-1.2.8-1-mingw32-dll.tar.lzma" />
+	</release>
       </component>
 
       <component class="doc">
@@ -84,6 +86,9 @@
         <release tarname="libz-1.2.7-1-mingw32-dll-1.tar.lzma" >
           <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
         </release>
+	<release tarname="libz-1.2.8-1-mingw32-dll-0.tar" >
+	  <download tarname="none" />
+	</release>
       </component>
 
       <component class="dev">
@@ -99,6 +104,10 @@
         <release tarname="libz-1.2.7-1-mingw32-dev.tar.lzma" >
           <requires eq="mingw32-libz-%-mingw32-%-dll-1.tar" />
         </release>
+	<release tarname="libz-1.2.8-1-mingw32-dev-0.tar" >
+	  <download tarname="none" />
+	  <requires eq="zlib-1.2.8-1-mingw32-dev.tar.lzma" />
+	</release>
       </component>
     </package>
 
